升级到spring-boot 3.1.4，升级到Java 21，升级相关依赖